# mason-cpp

./: .gitignore  Makefile  README.md  meson.build
include/mason/: mason.h
src/: mason.cc
